fixed login errors added hasher, makefile changed jwt manager implemented rest userLogin, userReg, tokenRefresh added some functions to userService, tokenService, userStorage, refreshTokenStorage added hash settings to config
